<resources>
    <string name="app_name">NavigationView</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="seccion_1">Sección 1</string>
    <string name="seccion_2">Sección 2</string>
    <string name="otras_opciones">Otras opciones</string>
    <string name="opcion_1">1991BBB</string>
    <string name="opcion_2">2992BBB</string>
    <string name="opcion_3">3993BBB</string>
    <string name="opcion_4">4994BBB</string>
    <string name="opcion_5">5995BBB</string>
    <string name="opcion_6">6996BBB</string>
    <string name="opcion_7">7997BBB</string>
    <string name="opcion_8">8998BBB</string>
    <string name="opcion_9">9999BBB</string>


    <string name="seccion_3">Sección 3</string>
    <string name="usuario">Usuario</string>
    <string name="menu_abierto">Menu Abierto</string>
    <string name="menu_cerrado">Menu Cerrado</string>
    <string name="fragment1">Fragment 1</string>
    <string name="fragment2">Fragment 2</string>
    <string name="fragment3">Fragment 3</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_maps2">Map</string>

</resources>
